cluster/apps/default/nextcloud/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: default
spec:
  ports:
    - port: 9443
      targetPort: 9443
---
kind: Endpoints
apiVersion: v1
metadata:
  name: nextcloud
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.106
    ports:
      - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
    external-dns/is-public: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: nextcloud.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nextcloud
                port:
                  number: 9443
  tls:
    - hosts:
        - nextcloud.${SECRET_DOMAIN}
      secretName: nextcloud-tls
